fixed issue with options icon on session user owned feed post going off screen when reducing screen size to mobile

--- a/react-app/src/components/FeedPage.css
+++ b/react-app/src/components/FeedPage.css
@@ -45,3 +45,13 @@
 .feed-profile-username:hover {
     cursor: pointer;
 }
+
+@media (max-width: 870px) {
+    .profile-container {
+        display: none;
+    }
+
+    .feed-container {
+        margin: 0 auto;
+    }
+}
